# Unix-V5

./: .gitignore  BUILD_SYSTEM_REPORT.md  CMakeLists.txt  Doxyfile.in  LEGACY_COMPATIBILITY.md  README.md  build-test.sh  cal  cmake-test.sh  demo.sh  meson.build  meson_options.txt
.devcontainer/: devcontainer.json
build-cmake/: .ninja_log  CMakeCache.txt  build.ninja  cc  cmake_install.cmake  cppcheck-report.xml
build-cmake/usr/c/: cmake_install.cmake
build-cmake/usr/source/: cmake_install.cmake
build-cmake/usr/source/s1/: cmake_install.cmake
build-cmake/usr/source/s2/: cmake_install.cmake
build-cmake/usr/source/s3/: cmake_install.cmake
build-cmake/usr/source/s4/: cmake_install.cmake
build-cmake/usr/source/s7/: cmake_install.cmake
build-cmake/usr/sys/: cmake_install.cmake
docs/: Doxyfile.in  conf.py  index.rst
docs/source/: introduction.rst
docs/source/kernel/: main_module.rst  overview.rst  scheduler_proc.rst  trap_syscall.rst
docs/source/utils/: cal.rst
scripts/: cc.sh.in
usr/c/: CMakeLists.txt
usr/source/: CMakeLists.txt
usr/source/s1/: CMakeLists.txt  cal.c
usr/source/s2/: CMakeLists.txt
usr/source/s3/: CMakeLists.txt
usr/source/s4/: CMakeLists.txt
usr/source/s7/: CMakeLists.txt
usr/sys/: CMakeLists.txt  buf.h  conf.h  file.h  filsys.h  inode.h  meson.build  param.h  proc.h  reg.h  seg.h  systm.h  user.h
usr/sys/conf/: CMakeLists.txt
usr/sys/dmr/: CMakeLists.txt
usr/sys/ken/: CMakeLists.txt  alloc.c  fio.c  main.c  slp.c  trap.c
